update play and pause

--- a/assets/index.html
+++ b/assets/index.html
@@ -92,42 +92,51 @@
     const $ = document.querySelector.bind(document)
     const $$ = document.querySelectorAll.bind(document)
 
+    const player = $('.player')
+    const heading = $('header h2')
+    const cdThumb = $('.cd-thumb')
+    const audio = $('#audio')
+    const cd = $('.cd')
+    const playBtn = $('.btn-toggle-play')
+
     const app = {
         currentIndex: 0,
+        isPlaying: false,
         songs: [
             {
                 name: "Phi Dieu & Ve Sau",
                 singer: "Nham Nhien",
-                path: './MusicPlayer/assets/music/1.m4a',
-                image: './MusicPlayer/assets/img/1.jpg'
+                path: '../assets/music/1.mp3',
+                image: '../assets/img/1.jpg'
             },
             {
                 name: "Bach Nguyet Quang Va Net Chu Sa",
                 singer: "Dai Tu",
-                path: './assets/music/2.m4a',
-                image: './assets/img/2.jpeg'
+                path: '../assets/music/2.mp3',
+                image: '../assets/img/2.jpeg'
             },
             {
                 name: "Thoi Khong Sai Lech ",
                 singer: "Ngai Than",
-                path: './assets/music/3.m4a',
-                image: './assets/img/3.jpeg'
+                path: '../assets/music/3.mp3',
+                image: '../assets/img/3.jpeg'
             }
         ],
         render: function () {
             const htmls = this.songs.map(song => {
                 return `
-                <div class="song">
-                    <div class="thumb" style="background-image: url('${song.image}')">
+                    <div class="song">
+                        <div class="thumb" style="background-image: url(${song.image})">
+                        </div>
+                        <div class="body">
+                            <h3 class="title">${song.name}</h3>
+                            <p class="author">${song.singer}</p>
+                        </div>
+                        <div class="option">
+                            <i class="fas fa-ellipsis-h"></i>
+                        </div>
                     </div>
-                    <div class="body">
-                        <h3 class="title">${song.name}</h3>
-                        <p class="author">${song.singer}</p>
-                    </div>
-                    <div class="option">
-                        <i class="fas fa-ellipsis-h"></i>
-                    </div>
-                </div>`
+                `
             })
             $('.playlist').innerHTML = htmls.join('')
         },
@@ -139,8 +148,9 @@
             })
         },
         handleEvents: function () {
-            const cd = $('.cd')
+            const _this = this
             const cdWidth = cd.offsetWidth
+            //xử lý phóng to, thu nhỏ
             document.onscroll = function () {
                 const scrollTop = document.documentElement.scrollTop
                 const newCDWidth = cdWidth - scrollTop
@@ -148,16 +158,33 @@
                 cd.style.width = newCDWidth > 0 ? newCDWidth + 'px' : 0
                 cd.style.opacity = newCDWidth / cdWidth
              }
+
+             //xử lý khi play
+             playBtn.onclick = function() {
+                 if (_this.isPlaying ) {
+                    audio.pause()
+                 } else {
+                     audio.play() 
+                 }
+             }
+
+             //khi song được play
+             audio.onplay = function() {
+                _this.isPlaying = true
+                player.classList.add('playing')
+             }
+            
+              //khi song bị pause
+              audio.onpause = function() {
+                _this.isPlaying = false
+                player.classList.remove('playing')
+             }
         },
         loadCurrentSong: function() {
-            const heading = $('header h2')
-            const cdThumb = $('.cd-thumb')
-            const audio = $('#audio')
-
             heading.textContent = this.currentSong.name
-            cdThumb.style.backgroundImage = `url('${this.currentSong.image})`
+            cdThumb.style.backgroundImage = `url('${this.currentSong.image}')`
             audio.src = this.currentSong.path
-            console.log(heading, cdThumb, audio)
+            console.log(audio)
         },
 
         start: function () {
@@ -167,7 +194,7 @@
             this.handleEvents()
 
             //Tải bài đầu tiên khi chạy ứng dụng
-            this.currentSong
+            this.loadCurrentSong()
             //render playlist
             this.render()
         }
