--- a/assets/index.html
+++ b/assets/index.html
@@ -98,10 +98,15 @@
     const audio = $('#audio')
     const cd = $('.cd')
     const playBtn = $('.btn-toggle-play')
+    const progress = $('#progress')
+    const nextBtn = $('.btn-next')
+    const prevBtn = $('.btn-prev')
+    const randomBtn = $('.btn-random')
 
     const app = {
         currentIndex: 0,
         isPlaying: false,
+        isRandom: false,
         songs: [
             {
                 name: "Phi Dieu & Ve Sau",
@@ -150,6 +155,15 @@
         handleEvents: function () {
             const _this = this
             const cdWidth = cd.offsetWidth
+            // xử lý cd quay và dừng
+            const cdThumbAnimate = cdThumb.animate([
+                {transform: 'rotate(360deg)'}
+            ], {
+                duration: 10000,
+                iterations: Infinity,
+            })
+            cdThumbAnimate.pause()
+
             //xử lý phóng to, thu nhỏ
             document.onscroll = function () {
                 const scrollTop = document.documentElement.scrollTop
@@ -172,19 +186,86 @@
              audio.onplay = function() {
                 _this.isPlaying = true
                 player.classList.add('playing')
+                 cdThumbAnimate.play()
              }
             
               //khi song bị pause
               audio.onpause = function() {
                 _this.isPlaying = false
                 player.classList.remove('playing')
-             }
+                cdThumbAnimate.pause()
+              }
+
+             //khi tiến độ bài hát thay đổi
+            audio.ontimeupdate = function () {
+                if (audio.duration) {
+                    const progressPercent = Math.floor(audio.currentTime / audio.duration * 100)
+                    progress.value = progressPercent
+                }
+            }
+
+            //Xử ls khi tua song
+            progress.onchange = function (e) {
+                const seekTime = audio.duration * e.target.value / 100
+                audio.currentTime = seekTime
+            }
+
+            // Khi next song
+            nextBtn.onclick = function() {
+                if (_this.isRandom) {
+                    _this.randomSong()
+                } else {
+                _this.nextSong()
+                }
+                audio.play()
+            }
+            // khi prev song
+            prevBtn.onclick = function() {
+                if (_this.isRandom) {
+                    _this.randomSong()
+                } else {
+                    _this.preSong()
+                }
+                audio.play()
+            }
+            // khi random song
+            randomBtn.onclick = function () {
+                _this.isRandom = !_this.isRandom
+                randomBtn.classList.toggle('active', _this.isRandom)
+            }
+
+
         },
         loadCurrentSong: function() {
             heading.textContent = this.currentSong.name
             cdThumb.style.backgroundImage = `url('${this.currentSong.image}')`
             audio.src = this.currentSong.path
-            console.log(audio)
+        },
+
+        nextSong: function () {
+            this.currentIndex++
+            if (this.currentIndex >= this.songs.length) {
+                this.currentIndex = 0
+            }
+            this.loadCurrentSong()
+        },
+
+        preSong: function () {
+            this.currentIndex--
+            if (this.currentIndex < 0) {
+                this.currentIndex = this.songs.length - 1
+            }
+            this.loadCurrentSong()
+        },
+
+        randomSong: function () {
+            let newIndex
+            do{
+                newIndex = Math.floor(Math.random() * this.songs.length)
+            }
+            while (newIndex === this.currentIndex)
+            this.currentIndex = newIndex
+            this.loadCurrentSong()
         },
 
         start: function () {
