--- a/assets/index.html
+++ b/assets/index.html
@@ -119,22 +119,58 @@
         },
         songs: [
             {
-                name: "Phi Dieu & Ve Sau",
-                singer: "Nham Nhien",
+                name: "Phi Điểu & Ve Sầu",
+                singer: "Nhậm Nhiên",
                 path: '../assets/music/1.mp3',
                 image: '../assets/img/1.jpg'
             },
             {
-                name: "Bach Nguyet Quang Va Net Chu Sa",
-                singer: "Dai Tu",
+                name: "Bạch Nguyệt Quang & Nét Chu Sa",
+                singer: "Đại Tử",
                 path: '../assets/music/2.mp3',
                 image: '../assets/img/2.jpeg'
             },
             {
-                name: "Thoi Khong Sai Lech ",
-                singer: "Ngai Than",
+                name: "Thời Không Sai Lệch ",
+                singer: "Ngải Thần",
                 path: '../assets/music/3.mp3',
                 image: '../assets/img/3.jpeg'
+            },
+            {
+                name: "Nhất Lộ Sinh Hoa",
+                singer: "Ôn Dịch Tâm",
+                path: '../assets/music/4.mp3',
+                image: '../assets/img/4.jpg'
+            },
+            {
+                name: "Chỉ Vì Quá Yêu Em",
+                singer: "Đinh Phù Ni",
+                path: '../assets/music/5.mp3',
+                image: '../assets/img/5.jpg'
+            },
+            {
+                name: "Lan Tự Đình ",
+                singer: "Châu Kiệt Luân",
+                path: '../assets/music/6.mp3',
+                image: '../assets/img/6.jpg'
+            },
+            {
+                name: "Không Bằng",
+                singer: "Tần Hải Thanh",
+                path: '../assets/music/7.mp3',
+                image: '../assets/img/7.jpg'
+            },
+            {
+                name: "Ca Tụng Sự Cô Đơn",
+                singer: "Trần Văn Phi",
+                path: '../assets/music/8.mp3',
+                image: '../assets/img/8.jpg'
+            },
+            {
+                name: "Khúc Cửu Môn Hồi Ức",
+                singer: "Đẳng Thập Ma Quân",
+                path: '../assets/music/9.mp3',
+                image: '../assets/img/9.jpg'
             }
         ],
         render: function () {
