--- a/assets/index.html
+++ b/assets/index.html
@@ -119,56 +119,56 @@
         },
         songs: [
             {
-                name: "Phi Điểu & Ve Sầu",
-                singer: "Nhậm Nhiên",
+                name: "Phi Dieu & Ve Sau",
+                singer: "Nham ",
                 path: '../assets/music/1.mp3',
                 image: '../assets/img/1.jpg'
             },
             {
-                name: "Bạch Nguyệt Quang & Nét Chu Sa",
-                singer: "Đại Tử",
+                name: "Bach Nguyet Quang & Net Chu Sa",
+                singer: "Đai ",
                 path: '../assets/music/2.mp3',
                 image: '../assets/img/2.jpeg'
             },
             {
-                name: "Thời Không Sai Lệch ",
-                singer: "Ngải Thần",
+                name: "Thoi Khong Sai Lech ",
+                singer: "Ngai Than",
                 path: '../assets/music/3.mp3',
                 image: '../assets/img/3.jpeg'
             },
             {
-                name: "Nhất Lộ Sinh Hoa",
-                singer: "Ôn Dịch Tâm",
+                name: "Nhat Lo Sinh Hoa",
+                singer: "On Dich Tam",
                 path: '../assets/music/4.mp3',
                 image: '../assets/img/4.jpg'
             },
             {
-                name: "Chỉ Vì Quá Yêu Em",
-                singer: "Đinh Phù Ni",
+                name: "Ch Vi Qua Yeu Em",
+                singer: "Dinh Phu Ni",
                 path: '../assets/music/5.mp3',
                 image: '../assets/img/5.jpg'
             },
             {
-                name: "Lan Tự Đình ",
-                singer: "Châu Kiệt Luân",
+                name: "Lan Tu Dinh",
+                singer: "Chau Kiet Luan",
                 path: '../assets/music/6.mp3',
                 image: '../assets/img/6.jpg'
             },
             {
-                name: "Không Bằng",
-                singer: "Tần Hải Thanh",
+                name: "Khong Bang",
+                singer: "Tan Hai Thanh",
                 path: '../assets/music/7.mp3',
                 image: '../assets/img/7.jpg'
             },
             {
-                name: "Ca Tụng Sự Cô Đơn",
-                singer: "Trần Văn Phi",
+                name: "Ca Tụng S Co Don",
+                singer: "Tran Van Phi",
                 path: '../assets/music/8.mp3',
                 image: '../assets/img/8.jpg'
             },
             {
-                name: "Khúc Cửu Môn Hồi Ức",
-                singer: "Đẳng Thập Ma Quân",
+                name: "Khuc Cuu Mon Hoi Ục",
+                singer: "Dang Thap Ma Quan",
                 path: '../assets/music/9.mp3',
                 image: '../assets/img/9.jpg'
             }
