--- a/assets/index.html
+++ b/assets/index.html
@@ -161,13 +161,13 @@
                 image: '../assets/img/7.jpg'
             },
             {
-                name: "Ca Tụng S Co Don",
+                name: "Ca Tụng Su Co Don",
                 singer: "Tran Van Phi",
                 path: '../assets/music/8.mp3',
                 image: '../assets/img/8.jpg'
             },
             {
-                name: "Khuc Cuu Mon Hoi Ục",
+                name: "Khuc Cuu Mon Hoi Uc",
                 singer: "Dang Thap Ma Quan",
                 path: '../assets/music/9.mp3',
                 image: '../assets/img/9.jpg'
