--- a/assets/index.html
+++ b/assets/index.html
@@ -161,7 +161,7 @@
                 image: '../assets/img/7.jpg'
             },
             {
-                name: "Ca Tụng Su Co Don",
+                name: "Ca Tung Su Co Don",
                 singer: "Tran Van Phi",
                 path: '../assets/music/8.mp3',
                 image: '../assets/img/8.jpg'
